--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
     },
     "files": {
         "ignoreUnknown": false,
-        "ignore": [".vscode"]
+        "ignore": [".vscode", "node_modules"]
     },
     "formatter": {
         "enabled": true,
@@ -20,7 +20,10 @@
     "linter": {
         "enabled": true,
         "rules": {
-            "recommended": true
+            "recommended": true,
+            "correctness": {
+                "noUnusedImports": "warn"
+            }
         }
     },
     "javascript": {
