--- a/package.json
+++ b/package.json
@@ -5,26 +5,35 @@
     "main": "index.js",
     "scripts": {
         "start": "tsx src/index.ts",
+        "dev": "tsx watch src/index.ts",
         "ci:fmt": "biome format --write .",
         "ci:lint": "biome lint .",
         "ci:lint-fix": "biome lint --write .",
         "ci:type-check": "tsc",
         "fix": "pnpm run \"/^ci:fmt$|^ci:lint-fix$/\"",
-        "check": "pnpm run \"/^ci:type-check$|^ci:lint$/\""
+        "check": "pnpm run \"/^ci:type-check$|^ci:lint$/\"",
+        "gen-config-schema": "tsx scripts/gen-config-schema.ts"
     },
     "keywords": [],
     "author": "",
-    "typs": "moudls",
+    "type": "module",
     "license": "MIT",
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
         "@types/express": "^5.0.0",
         "@types/node": "^22.10.5",
-        "typescript": "^5.7.2"
+        "better-sqlite3": "^11.7.0",
+        "typescript": "^5.7.2",
+        "zod-to-json-schema": "^3.24.1"
     },
     "dependencies": {
+        "@types/morgan": "^1.9.9",
         "express": "^4.21.2",
+        "knex": "^3.1.0",
+        "morgan": "^1.10.0",
         "sharp": "^0.33.5",
-        "tsx": "^4.19.2"
+        "smol-toml": "^1.3.1",
+        "tsx": "^4.19.2",
+        "zod": "^3.24.1"
     }
 }
