--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
     },
     "files": {
         "ignoreUnknown": false,
-        "ignore": [".vscode", "node_modules"]
+        "ignore": [".vscode", "node_modules", "config.schema.json"]
     },
     "formatter": {
         "enabled": true,
