--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,12 @@
     },
     "files": {
         "ignoreUnknown": false,
-        "ignore": [".vscode", "node_modules", "config.schema.json"]
+        "ignore": [
+            ".vscode",
+            "node_modules",
+            "config.schema.json",
+            "tsconfig.json"
+        ]
     },
     "formatter": {
         "enabled": true,
